--- a/book.tex
+++ b/book.tex
@@ -41,13 +41,13 @@ normalheadings,DIV=9,fleqn,x11names,table,twoside=false]{scrbook}
 \definecolor{colordominante}{RGB}{64,190,178}
 
 \begin{document}
-\includepdf[pages=-]{images/Portada}
+%\includepdf[pages=-]{images/Portada}
 
 %=========================================
 \begin{titlepage}
 		\centering{
 			{\fontsize{40}{48}\selectfont 
-			FÍSICA 1ro BGU}
+			Primer en Física}
 		}\\
 			
 		\vspace{10mm}
@@ -70,14 +70,12 @@ normalheadings,DIV=9,fleqn,x11names,table,twoside=false]{scrbook}
 \noindent {\color{colordominante} Photos by}: Julio César Andrade.\\
 \noindent \textbf{Libro digital}\\
 
-\noindent  Copyright © 2019 Julio César Andrade. Se concede permiso para copiar, distribuir y/o modificar este documento bajo los 
-términos de la Licencia de Documentación Libre de GNU, Versión 1.3 o cualquier otra versión posterior publicada por la Free 
-Software Foundation; sin Secciones Invariantes ni Textos de Cubierta Delantera ni Textos de Cubierta Trasera. Una copia de la 
-licencia está incluida en la sección titulada "GNU Free Documentation License"\\
+\noindent  Copyright © 2019 Julio César Andrade\footnote{Correspondencia: fisicojuliocesar@yahoo.com}. 
+Cualquier forma de reproducción, distribución, comunicación pública o transformación de esta obra sólo puede ser realizada con  la 
+ autorización  del autor,  salvo  excepción  prevista  por  la  ley.  Diríjase  al autor si  necesita  fotocopiar  o  escanear 
+algún fragmento de esta obra.\\
 
 Copyright notice above.\\
-
-Everyone is permitted to copy and distribute verbatim copies of this license document, but changing it is not allowed.\\
 
 Copyright Infringement Notification.\\
 
