--- a/book.tex
+++ b/book.tex
@@ -298,8 +298,7 @@ $0,0000000000000000000000345 = 3,45\times10^{-23}$\\
 \begin{tcolorbox}
 Si se trata de un número menor que 1 al cual se quiere expresarlo en notación científica el procedimiento es mover el punto 
 décimal hacia la derecha contando las posiciones que recorre hasta antes del segundo dígito de la derecha y entonces multiplicar 
-este número por una potencia de 10 elevado al 
-número de posiciones recorridas con signo negativo. 
+este número por una potencia de 10 elevado al número de posiciones recorridas con signo negativo. 
 \end{tcolorbox}
 
 En el manejo de este tipo de cantidades resulta común la realización de operaciones matemáticas básicas entre ellas, para lo cual 
@@ -322,6 +321,9 @@ Exprese las siguientes cantidades en notación científica:
  \item[j.] 5.06004 
  \item[k.] 0.0007456
  \item[l.] 0.0034521
+ \item[m.] 0.00000300004454
+ \item[n.] 22825323.2309288487
+ \item[o.] 0.000000000000000000455
 \end{itemize}
 
 Realice las operaciones siguientes y expresar la respuesta en notación científica:
@@ -336,6 +338,8 @@ Realice las operaciones siguientes y expresar la respuesta en notación científ
 \item[p.] $\frac{0,081\times10^{20}}{0,9\times10^{-34}}\times(2,5\times10^{12})$
 \item[q.] $\sqrt{9,8\times10^{-7}+7,5\times10^{-6}+0.52\times 10^{-6}}$
 \item[r.] $((0.00005)^3\times (0.003\times 10^{-3})^{-2})^3$
+\item[s.] $\sqrt[5]{\frac{(2.00001\times 10^{-4} - 1.00002\times 10^{-4})^{0.01}}{(0.111111-1.2\times 10^{-2})^{1/3}}}$
+\item[t.] $\sqrt{2\times 10^{-5}}-\sqrt{5\times 10^{-2}} + \sqrt{2} - \sqrt{5}$
 \end{itemize}
 
 \section{Magnitudes y Medidas:}
@@ -347,10 +351,29 @@ Y a todo ello que el hombre puede medir se lo denomina \textbf{magnitud}. Y a la
 magnitudes de la misma naturaleza, asignandola a una de ellas como patrón de medida, y de esta manera a aquello que es medible se 
 le asigna un número y así es susceptible de un análisis posterior.
 
-\subsection{Sistema Internacional de Medidas (S.I.)}
+\subsection{Sistema Internacional de Medidas (SI)}
 
 Es un conjunto de reglas, normas y disposiciones que rigen a nivel mundial para tener uniformidad en la determinación de una 
-medida. Constituye el sistema de unidades adoptado por la Undécima Conferencia General de Pesos y Medidas celebrada en 1960. 
+medida, la cual se fundamenta en siete unidades fundamentales. Constituye el sistema de unidades adoptado por la Undécima 
+Conferencia General de Pesos y Medidas celebrada en 1960.\\ 
+
+Este sistema de unidades ha proporcionado a la comunidad científica un sistema de unidades sencillas y la promulgación de un 
+sistema de unidades unificado, teniéndose las siguientes características:
+
+\begin{enumerate}
+
+ \item Posee una sola unidad de medida para cada magnitud y es su principal característica.
+ 
+ \item  Sus unidades se basan en fenómenos físicos fundamentales.
+
+ \item Coherencia, existe una relación lógica y matemática entre sus elementos, unidades, símbolos, múltiplos y submúltiplos.
+ 
+ \item Sencillez, a la voz de los cálculos y operaciones es de fácil uso y aprendizaje.
+ 
+ \item Universabilidad, permite cubrir con sus unidades la totalidad de magnitudes que se encuentran en la ciencia y tecnología.
+ 
+\end{enumerate}
+
 
 \subsection{Tipos de magnitudes:}
 
@@ -358,42 +381,79 @@ Se dividen en:\\
 
 \textbf{Fundamentales:} Son aquellas que no pueden definirse o derivarse de otras magnitudes, sino más bien ya son de por si 
 primarias, es decir, no se definen en función de otras magnitudes, y entre ellas por ejemplo son: masa, la longitud, el tiempo, la 
-temperatura, la intensidad luminosa, la cantidad de sustancia y la intensidad de corriente.\\
+temperatura, la intensidad luminosa, la cantidad de sustancia y la intensidad de corriente. Las unidades fundamentales del SI 
+son las siguientes:
 
-\textbf{Derivadas:} Son aquellas magnitudes que se derivan por la combinación de las magnitudes fundamentales, por ejemplo: el 
-área, el volumen, el peso, la energía, la velocidad, etc.
+\subsubsection{Kilogramo}
+
+Masa del prototipo internacional del kilogramo, adoptado por la Conferencia General de Pesas y Medidas y depositado en la Oficina 
+Internacional de Pesas y Medidas, en Sèvres, Francia.\\
+
+Este prototipo es un cilindro de 39 mm de altura y 39 mm de diámetro de una aleación 90\% de platino y 10\% de iridio; tiene 
+una densidad aproximada de $21 500 kg/m^3$. 
+
+\subsubsection{Metro}
+
+Longitud del trayecto recorrido por la luz en el vacío en un intervalo de tiempo de 1/299 792 458 segundos.
+
+\subsubsection{Segundo}
+
+Duración de 9 192 631 770 periodos de la radiación correspondiente a la transición entre los dos niveles hiperfinos del estado 
+fundamental del átomo de cesio 133. 
+
+\subsubsection{Amperio}
+
+Intensidad de una corriente constante que, mantenida en dos conductores paralelos rectilíneos de longitud infinita, de sección 
+circular despreciable y situados a una distancia de un metro uno del otro, en el vacío, produciría entre estos conductores una 
+fuerza igual a $2 × 10^{−7}$ newton por metro de longitud. 
+
+\subsubsection{Kelvin}
+
+Fracción 1/273.16 de la temperatura termodinámica del punto triple del agua.
+
+\subsubsection{Mol}
+
+Cantidad de sustancia de un sistema que contiene tantas entidades elementales como átomos hay en 0.012 kilogramos de carbono 12.
+
+\subsubsection{Candela}
+
+Intensidad luminosa, en una dirección dada, de una fuente que emite una radiación monocromática de frecuencia $540 \times 1012$ 
+hercios y cuya intensidad energética en esa dirección es 1/683 vatios por estereorradián.\\ 
 
 Y así, la comunidad científica se ha puesto de acuerdo para seguir unos mismos entandares y unidades de medidas ya esto se lo 
 llama: El Sistema Internacional de Unidades (SI), el cual utiliza por convención siete magnitudes fundamentales: 
 
-\begin{table}[h]
+\begin{table}[H]
 \centering
-\begin{tabular}{lcc}
+\begin{tabular}{lccc}
 \hline
-Magnitud & Unidad de medida & Símbolo\\
+Magnitud & Unidad de medida & Símbolo & Dimensión\\
 \hline
-Masa & kilogramo & kg \\
-Longitud & metro & m\\
-Tiempo & segundo & s\\
-Temperatura & kelvin & K\\
-Intensidad luminosa & candela & cd\\
-Cantidad de sustancia & mol & mol\\
-Intensidad de corriente & amperio & A\\
+Masa & kilogramo & kg & M\\
+Longitud & metro & m & L\\
+Tiempo & segundo & s & T\\
+Temperatura & kelvin & K & $\Theta$ \\
+Intensidad luminosa & candela & cd & $\Psi$\\
+Cantidad de sustancia & mol & mol & N\\
+Intensidad de corriente & amperio & A & I\\
 \hline
 \end{tabular}
 \caption{Tabla de magnitudes fundamentales.} 
 \end{table}
 
-Tambíen tenemos otro tipo de magnitudes que son complementarias a las antes ya mencionadas:
+\textbf{Derivadas:} Son aquellas magnitudes que se derivan por la combinación de las magnitudes fundamentales, por ejemplo: el 
+área, el volumen, el peso, la energía, la velocidad, etc.\\
 
-\begin{table}[h]
+Tambíen tenemos otro tipo de magnitudes que son \textbf{complementarias} a las antes ya mencionadas:
+
+\begin{table}[H]
  \begin{center}
- \begin{tabular}{llc}
+ \begin{tabular}{llcc}
  \hline
-Magnitud & Unidad de medida & Símbolo\\
+Magnitud & Unidad de medida & Símbolo & Dimensión\\
 \hline
-Ángulo plano & radián & rad\\
-Ángulo sólido & estereoradián & sr\\
+Ángulo plano & radián & rad & $\alpha$ \\
+Ángulo sólido & estereoradián & sr & $\omega$ \\
 \hline
  \end{tabular}
  \caption{Tabla de magnitudes complementarias.}
@@ -405,12 +465,14 @@ Magnitud & Unidad de medida & Símbolo\\
 Para representar las medidas de diferentes magnitudes las cuales presentan cantidades muy grandes o muy pequeñas hace falta 
 establecer un estándar de prefijos de múltiplos y submúltiplos de la siguiente manera:
 
-\begin{table}[h]
+\begin{table}[H]
  \begin{center}
 \begin{tabular}{rccc}
 \hline
 Factor numérico & Exponente & Prefijo & Símbolo\\
 \hline
+1 000 000 000 000 000 000 000 000 & $10^{24}$ & yotta & Y \\
+1 000 000 000 000 000 000 000 & $10^{21}$ & zetta & Z \\
 1000 000 000 000 000 000 & $10^{18}$ & exa & E\\
 1000 000 000 000 000 & $10^{15}$ & peta & P\\
 1000 000 000 000 & $10^{12}$ & tera & T\\
@@ -425,7 +487,7 @@ Factor numérico & Exponente & Prefijo & Símbolo\\
  \end{center}
 \end{table}
  
-\begin{table}[h]
+\begin{table}[H]
  \begin{center}
 \begin{tabular}{rccc}
 \hline
@@ -439,12 +501,28 @@ Factor Numérico & Exponente & Prefijo & Símbolo\\
 0.000000000001 & $10^{-12}$ & pico & p\\
 0.000000000000001 & $10^{-15}$ & femto & f\\
 0.000000000000000001 & $10^{-18}$  & atto & a\\
+0.000 000 000 000 000 000 001 & $10^{-21}$ & zepto & z\\
+0.000 000 000 000 000 000 000 001 & $10^{-24}$ & yocto & y\\
 \hline
 \end{tabular}
 \caption{Tabla de submúltiplos del SI.}
  \end{center}
  \end{table}
  
+\subsection{Análisis dimensional}
+
+La palabra dimensión\footnote{Cualquier elemento del conjunto de cantidades o unidades basicas de las cuales se pueden derivar el 
+resto, por ejemplo, masa, longitud, tiempo} tiene un significado especial en Física, y por lo general ($[\quad]$) denota la 
+naturaleza física de una cantidad. Por ejemplo las distancias pueden medirse en metros.\\
+
+\textbf{Ejemplo:} $[\text{velocidad}] = [v] =\frac{L}{T^2}$, $[\text{área}] = [A] = L^2$\\
+ 
+El análisis dimensional sirve para deducir o verificar la validez de una fórmula específica ó para comprobar su expresión final.\\
+
+\textbf{Ejemplo:} Siendo la fórmula de la velocidad final en un tipo de movimiento la siguiente: $v_f = v_0 + at$, la analizo 
+dimensionalmente: $[v_f] = [v_0] + [a][t] = \frac{L}{T} = \frac{L}{T} + \frac{L}{T^2}T$, y por tanto compruebo que tiene validez 
+dimensional.
+
 \subsection{Problemas de conversión de unidades:}
 Convertir las siguientes magnitudes a lo que se indica:
 \begin{itemize}
@@ -467,7 +545,70 @@ Convertir las siguientes magnitudes a lo que se indica:
  \item[18.] 32 $kg/m^3$ a $g/cm^3$.
  \item[19.] 92 $m^3/s$ a $cm^3/s$.
  \item[20.] 73 $g/cm^2$ a $kg/m^2$.
+ \item[21.] Encuentre el valor de:\\
+ $\frac{(0,9997895\times 10^{-7}pm)^2(2,714\times 10^8 ns)}{(1124.45\times 10^{-3} fm)(5,27\times 10^4 Ekg)}\times 
+\left(\frac{346512,345\times 10^{-6} \mu kg}{0,00023 Ts}\right)^3$.
+ \item[22.] Realice el análisis dimensional del resultado del anterior problema.
 \end{itemize}
+
+\section{Fórmulas}
+
+Una fórmula es una expresión matemática de una ley o principio general que hace el uso de números, símbolos y letras. En Física 
+las fórmulas indican las relaciones que existen entre varias magnitudes de un mismo fenómeno. Es clave entender el significado 
+físico de cada magnitud y el contexto de la aplicación de una fórmula física.\\
+
+Así, por ejemplo en Geometría es conocido que el área de un triángulo es igual a la mitad del producto de la base $b$ por la 
+altura $h$ de ese triángulo, es decir: $A = \frac{1}{2}b\times h$.\\
+
+Las fórmulas son usadas en las ciencias como la Matemática, Física, Química, etc, y son de enorme utilidad, ya que expresan de 
+manera simplificada una ley o principio general, son fáciles de recordar y su aplicación es fácil.
+
+\subsection{Despeje de fórmulas}
+
+Despejar una variable en una fórmula o ecuación es el proceso que lleva a encontrar una ecuación equivalente en que la variable 
+esté aislada en un miembro de la ecuación. Al despejar una variable en una ecuación conseguimos una fórmula en que la variable 
+está expresada en términos de las otras variables mediante el uso de las leyes del Algebra de tal modo que consigamos el correcto 
+despeje. Cabe mencionar que la dificultad de un despeje en particular depende exclusivamente de la forma de la fórmula.  
+
+
+\subsubsection{Problemas de despeje de fórmulas:}
+
+En las fórmulas mostradas despejar las magnitudes que se señalan:
+
+\begin{enumerate}
+ \item $d$ y $t$ en $v = \frac{d}{t}$.
+ \item $v_0$ y $a$ en $v_f = v_0 + at$.
+ \item $a$, $v_{0}$ y $t$ en $d = v_{0} t + \frac{1}{2} at^2$.
+ \item $a$ en $k = \frac{f - g}{b - a}$.
+ \item $b$ en $q = q_0 \sqrt{a-b}$.
+ \item $t$ en $\lambda = \lambda_0 e^{-kt}$.
+ \item $m$, $g$,$h$ y $v$ en $E = \frac{1}{2}mv^2 + mgh$.
+ \item $a$ en $c^2 = a^2 + b^2$.
+ \item $c$ en $E = mc^2$.
+ \item $B$ en $A = \frac{B + b}{2}$.
+ \item $c$ en $A = \sqrt{s(s-a)(s-b)(s-c)}$.
+ \item $\alpha$ en $\frac{b}{\sen(\beta)}=\frac{a}{\sen(\alpha)}$.
+ \item $m'$ y $r$ en $F = G\frac{mm'}{r^2}$.
+ \item $\theta$ en $W = Fd cos(\theta)$.
+ \item $w$ en $F = -mw^2r$.
+ \item $m_1$ en $x = \frac{m_1x_1+m_2x_2}{m_1+m_2}$.
+ \item $d$ y $v_0$ en $v^2 = v_0^2 -2ad$.
+ \item $R_2$ en $\frac{1}{R} = \frac{1}{R_1} + \frac{1}{R_2}$.
+ \item $k$ y $w$ en $s^m = t_v + \log_{12}(k-w^2)t$.
+ \item $p$ y $c$ en $E^2 = m^2 c^4 + p^2c^2$.
+ \item $a$ en $r = t +\frac{1}{3}(\frac{a}{x-a})^2$.
+ \item $v$ en $m = \frac{m_0}{\sqrt{1-\frac{v^2}{c^2}}}$.
+ \item $g$ en $T = 2\pi\sqrt{l/g}$.
+ \item $w$ en $A = K cos(ku - wt)$.
+ \item $a$ y $c$ en $x = \frac{-b \pm \sqrt{b^2-ac}}{2a}$.
+ \item $i$ en $a = 3j - \frac{q}{q-i}$.
+ \item $k$ y $\lambda$ en $j = j_0 e^{-\lambda\sqrt{k-k_0}}$.
+ \item $u$ y $v$ en $\log_{v}(10) < \log_{u}(kt) - st$.
+ \item $\beta$ en $C =  \frac{6\zeta P_0^2 + 3\beta}{4\zeta P_0^2 + 3\beta}$.
+ \item $\zeta$ en $\xi = \frac{\sqrt{g}}{P_0\left( \zeta P_0^2+\frac{1}{2}\beta\right)^{1/2}}$.
+ \end{enumerate}
+
+
 
 \chapter{Cantidades escalares y vectoriales:}
 
@@ -698,7 +839,7 @@ Este producto se da entre dos vectores dando como resultado otro vector. Este pr
 \begin{tcolorbox}
  Sean $\vec{a} =a_x\vec{i}+a_y\vec{j}+a_z\vec{k}$ y $\vec{b}=b_x\vec{i}+b_y\vec{j}+b_z\vec{k}$ dos vectores entonces el 
  producto vectorial entre ellos se define como: 
- 
+\scriptsize{ 
  \[
 \vec{a}\times\vec{b} =
 \begin{vmatrix}
@@ -706,7 +847,7 @@ Este producto se da entre dos vectores dando como resultado otro vector. Este pr
 a_x & a_y & a_z \\
 b_x & b_y & b_z
 \end{vmatrix} = (a_yb_z-b_ya_z)\vec{i}-(a_xb_z-a_zb_x)\vec{j}+(a_xb_y-b_xa_y)\vec{k}
-\]
+\]}
 \end{tcolorbox}
 
 Siendo el vector $\vec{a}\times\vec{b}$ perpendicular a los vectores $\vec{a}$ y $\vec{b}$, y que cuyo módulo es:
@@ -733,8 +874,7 @@ vectorial de dos vectores equivale al área del paralelogramo construído en est
  \item[1.] Encuentre el módulo y dirección del vector $\vec{a}= \vec{i} - \vec{j}$.
  \item[2.] Encuentre el vector unitario del anterior problema.
  \item[3.] Calcula el valor de k sabiendo que el módulo del vector v= (k, 3) es 5.
- \item[4.] Hallar las coordenadas del punto C, sabiendo que B(2, ?2) es el punto medio de AC, A(?3,
-1).
+ \item[4.] Hallar las coordenadas del punto C, sabiendo que B(2,2) es el punto medio de AC, A(3,1).
  \item[5.] Dos vectores forman entre sí un ángulo de 60°, si el valor de su resultante es de 156 unidades, y la magnitud de uno de 
 los vectores componentes es de 100 unidades, ¿cuál será la magnitud del otro vector?
  \item[6.]Un alumno camina 50 m hacia el este, a continuación 30 m hacia el sur, después 20 m hacia el oeste, y finalmente, 10 m 
@@ -928,6 +1068,21 @@ Esta velocidad es la que marca el velocímetro dentro de un auto por ejemplo.
 
 Una vez comprendido estos conceptos fundamentales del movimiento es tiempo de analizar el movimiento más simple que existe: 
 \textit{El movimiento rectilíneo}.
+
+\subsection*{Problemas}
+
+\begin{enumerate}
+ \item ¿Cuál es el desplazamiento realizado por un móvil que partió desde la posición $\vec{r_0} = 20 km;N34^\circ O$ hacia la 
+posición $\vec{r_f} = 30 km; S45^\circ E$? 
+
+\item Si el desplazamiento realizado por el móvil del problema anterior fue realizado en un tiempo promedio de 4 minutos,¿cuál es 
+la velocidad promedio desarrollada por dicho móvil?
+
+\end{enumerate}
+
+
+
+
 
 
 \chapter{Movimiento Rectilíneo:}
@@ -1800,10 +1955,11 @@ Las unidad de medida para la potencia en el S.I son el Watts ($W$), el cual se d
 \chapter*{Bibliografía:}
 
 \begin{enumerate}
+ \item Kuhn, Thomas S., "The Function of Measurement in Modern Physical Science", ISIS 52(2), 161?193, 1961.
+ \item Molina M.J.T.- El Método Científico Global.
  \item René Descartes. Discurso del método. segundo título o indicación al título principal Discours de la methode. Pour bien 
 conduire la raison \& chercher.
- \item Molina M.J.T.- El Método Científico Global.
- \item Kuhn, Thomas S., "The Function of Measurement in Modern Physical Science", ISIS 52(2), 161?193, 1961.
+ \item Rozenberg, I. M. (2002). O sistema internacional de unidades-SI. Instituto Mauá de Tecnologia.
  \end{enumerate}
 
 \end{document}
